# Stimpack

./: .gitignore  README.md  gpu_profile.py  main.py  pyproject.toml
models/: .gitignore  0_vmaf_for_stim.py  1_vmaf_res_converter_cam.py  1_vmaf_res_scene_vis.py  2_vmaf_output_vis.py  3_vmaf_output_split.py  4_error_vis.py
models/pred_vmaf/: .gitignore  0_model_train.py  0_model_train_rev.py  1_model_test.py  1_model_test_rev.py  2_trained_model_test.py  testing_data.csv
models/pred_vmaf/loocv/1/: test.csv  train.csv
models/pred_vmaf/loocv/2/: test.csv  train.csv
models/pred_vmaf/loocv/3/: test.csv  train.csv
models/pred_vmaf/loocv/4/: test.csv  train.csv
models/pred_vmaf/loocv/5/: test.csv  train.csv
models/pred_vmaf/trained_models/: ada_reg.pkl  bag_reg.pkl  dt_reg.pkl  knn_reg.pkl  linear_reg.pkl  mlp_reg.pkl  rbf_svr.pkl  rf_reg.pkl  sgd_reg.pkl  voting_reg.pkl
net_data/: .gitignore  1_log_csv.py  2_add_kbps.py  3_kbps_scaler.py  4_kbps_mvavg.py  5_qp_trace.py  README.md
net_data/3g/t1/: get.sh
net_data/3g/t10/: get.sh
net_data/3g/t11/: get.sh
net_data/3g/t2/: get.sh
net_data/3g/t3/: get.sh
net_data/3g/t4/: get.sh
net_data/3g/t5/: get.sh
net_data/3g/t6/: get.sh
net_data/3g/t7/: get.sh
net_data/3g/t8/: get.sh
net_data/3g/t9/: get.sh
net_data/4g/: get.sh
runtime/: common.py  fl_monitor.py  frame_quality_model.py  mock_model.py  mock_user.py  my_logger.py  replay_user_qp.py  rq_manager.py  runner.py  update_user_qp.py  user_qp_updater.py  user_registerer.py
